# kot

./: .drone.yml  .gitignore  Cargo.toml  KOT_KEYWORDS  KOT_OPTS  NEW_KOT  NEW_KOT_1  NEW_KOT_2  NEW_KOT_3  NEW_KOT_4  NEW_KOT_5  NEW_KOT_TYPES  README.md  deny.toml  justfile  kotfile  new_idea.koi  new_idea.kot  new_idea_2.koi
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aarch64.yml  build.yml  checks.yml  markdown-checks.yml  rust.yml  x86-64.yml
benches/: kot_tmp.rs
docs/: EXPRESSION_PRECEDENCE.md
impls/rust/: .gitignore  Cargo.toml  rustfmt.toml
impls/rust/crates/kot/: Cargo.toml
impls/rust/crates/kot/src/: lib.rs
impls/rust/crates/kot_compiler/: Cargo.toml
impls/rust/crates/kot_compiler/src/: eval.rs  kot_types.rs  lexer.rs  lib.rs  parse_tokens.rs  parser.rs  tokens.rs  writer.rs
impls/rust/src/: logging.rs  main.rs
specs/0/: example.koi  example.kot  example.txt  example_noval.kot  example_typef.kot  kot.build  spec.txt
src/: args.rs  ast.rs  config.rs  entry.rs  entry_args.rs  lexer.rs  lib.rs  main.rs  parser.rs  platform.rs  runner.rs  tmp.rs  token.rs
src/data/: ast.rs  interpreter.rs  mod.rs  token.rs
src/interp/: mod.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  test.rs
src/parser/: dot.rs  mod.rs  ops.rs  parse_item.rs  parse_tree.rs  slash.rs  unwrap.rs
src/test/: iter_1.rs  iter_2.rs  lexer.rs  mod.rs  parser.rs
test/: kotfile  kotfile2  kotfile3  kotfiledev  kotfilelexer
test/iter_1/: 2.kot
test/iter_2/: 1.kot
vm/: Cargo.toml
vm/src/: info.rs  lexer.rs  lib.rs
