[package]
name = "kot"
version = "0.1.0-dev"
edition = "2021"
authors = ["harmless-tech"]
description = "A command runner"
readme = "README.md"
license = "MIT"
repository = "https://github.com/harmless-tech/kot"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "task", "runner", "development", "utility"]
#rust-version = "1.70"
include = [
    "src/",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[[bin]]
name = "kot"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
num_cpus = "1.16.0"
rustc-hash = "1.1.0"

[features]
default = ["i64"]
# Use i64 as int type.
i64 = []
# Allow args and other things to be processed on a separate thread. (Max: 4)
# TODO: This seems to be slow so maybe get rid of it. Or use an async runtime.
threads = []

# TODO: Add benchmarking
#[dev-dependencies]
#criterion = "0.5.1"
#
#[[bench]]
#name = "kot_tmp"
#harness = false
#required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.small]
inherits = "release"
opt-level = "s"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
