[package]
name = "kot"
version = "0.1.0-dev"
edition = "2021"
authors = ["harmless-tech"]
description = "A scripting language"
readme = "README.md"
license = "MIT"
repository = "https://github.com/harmless-tech/kot"
categories = []
keywords = ["scripting", "scripting-language"]
rust-version = "1.70"
include = [
    "src/",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[[bin]]
name = "kot"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
#aho-corasick = "1.1.2"
anyhow = "1.0.75"
#bitflags = { version = "2.4.1", features = ["std"] }
#indexmap = "2.1.0"
#num_cpus = "1.16.0"
#rustc-hash = "1.1.0"

[features]
default = []
# Use 32-bit number types, otherwise 64-bit
# TODO: Remove? Is this feature going to cause a lot of problems later?
32-bit-types = []
# Build docs.
__docs = []

[package.metadata.docs.rs]
features = ["__docs"]
rustdoc-args = ["--document-private-items"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "s"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
