[package]
name = "kot"
version = "0.0.1-dev.0"
edition = "2021"
authors = ["harmless-tech"]
description = "A scripting language"
readme = "README.md"
license = "MIT"
#homepage = ""
repository = "https://github.com/harmless-tech/kot"
categories = ["command-line-utilities"]
keywords = ["scripting", "scripting-language"]
#rust-version = "1.70"
include = [
    "src/",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[[bin]]
name = "kot"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.80"
const-hex = "1.11.1"
#mimalloc = "0.1.39"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.quick-build]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
