[package]
name = "kot-bin"
version = "0.0.1"
edition = "2018"
authors = ["harmless-tech"]
description = "A strictly typed format for storing and reading data. Binary for compiling and reading kot files."
readme = "../../README.md"
homepage = "https://harmless.tech/languages/kot"
repository = "https://github.com/harmless-tech/kot"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kot"
path = "src/main.rs"

[dependencies]
brotli = "3.3.0"
kot = { path = "crates/kot", version = "0.0.1" }
kot_compiler = { path = "crates/kot_compiler", version = "0.0.1" }
log = "0.4.14"
log4rs = "1.0.0"

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
