[package]
name = "kot-bin"
version = "0.0.1"
edition = "2021"
authors = ["harmless-tech"]
description = "A strictly typed format for storing and reading data. Binary for compiling and reading kot files."
readme = "../../README.md"
homepage = "https://harmless.tech/languages/kot"
repository = "https://github.com/harmless-tech/kot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kot"
path = "src/main.rs"

[dependencies]
brotli = "3.3.4"
kot = { path = "crates/kot" }
kot_compiler = { path = "crates/kot_compiler" }
log = "0.4.17"
log4rs = "1.1.1"

[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
