[package]
name = "kot"
version = "0.0.1"
edition = "2021"
authors = ["harmless-tech"]
description = "A strictly typed format for storing and reading data."
readme = "../../../../README.md"
homepage = "https://harmless.tech/languages/kot"
repository = "https://github.com/harmless-tech/kot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
