[package]
name = "kot_compiler"
version = "0.0.1"
edition = "2018"
authors = ["harmless-tech"]
description = "A strictly typed format for storing and reading data. Library for compiling kot files."
readme = "../../../../README.md"
homepage = "TODO URL"
repository = "https://github.com/harmless-tech/kot"
# license = "MIT License - Copyright (c) 2021 Harmless_Tech"
license-file = "../../../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
kot = { path = "../kot" }
regex = "1.5.4"
lazy-regex = "2.2.1"
aho-corasick = "0.7.18"
