[package]
name = "kot_compiler"
version = "0.0.1"
edition = "2018"
authors = ["harmless-tech"]
description = "A strictly typed format for storing and reading data. Library for compiling kot files."
readme = "../../../../README.md"
homepage = "https://harmless.tech/languages/kot"
repository = "https://github.com/harmless-tech/kot"
license-file = "../../../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kot = { path = "../kot", version = "0.0.1" }
lazy-regex = "2.2.1"
log = "0.4.14"
